--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -32,7 +32,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  max-height: 380px;
+  max-height: 420px;
   overflow-y: auto;
   scrollbar-width: thin;
   color: colors.$c-tan;
@@ -53,7 +53,8 @@
     text-align: left;
     align-items: center;
     display: flex;
-    h3, h4 {
+    h3,
+    h4 {
       margin: 0;
       white-space: nowrap;
       overflow-x: hidden;
@@ -77,7 +78,9 @@
     align-items: center;
     padding: 0 2px; // to align with the header border
     border-bottom: 1px solid colors.$c-faint;
-    &:last-child { border-bottom: none; }
+    &:last-child {
+      border-bottom: none;
+    }
     .item-name {
       color: colors.$c-dark;
       .item-image {
@@ -149,21 +152,26 @@
   right: 0;
   bottom: 0;
   background-color: #555;
-  transition: .4s;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  transition: 0.4s;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
-/* Slider Circle */
-.slider:before {
+.slider .fa-cog {
   position: absolute;
-  content: "";
-  height: 16px;
-  width: 16px;
   left: 2px;
   bottom: 2px;
+  width: 16px;
+  height: 16px;
   background-color: white;
-  transition: .4s;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: left 0.4s ease;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  font-size: 10px;
+  color: #555;
+  z-index: 2;
 }
 
 /* Checked State - Foundry Orange */
@@ -172,8 +180,9 @@ input:checked + .slider {
 }
 
 /* Move slider on checked */
-input:checked + .slider:before {
+input:checked + .slider .fa-cog {
   transform: translateX(20px);
+  color: colors.$c-dark;
 }
 
 /* Rounded Slider */
