--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -30,12 +30,20 @@
   margin-bottom: 10px;
 }
 
+.mb-11 {
+  margin-bottom: 11px;
+}
+
+.mb-12 {
+  margin-bottom: 12px;
+}
+
 .mb-20 {
   margin-bottom: 20px;
 }
 
 .application.sheet.sdm.actor {
-  min-width: 850px;
+  min-width: 900px;
   min-height: 820px;
   max-width: 1500px;
   max-height: 1500px;
