--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -1,2 +1,3 @@
-$font-primary: 'Roboto', sans-serif;
-$font-secondary: 'Roboto', sans-serif;
+$font-primary: 'Baron Neue';
+$font-secondary: 'Alegreya', sans-serif;
+$font-tab: 'Bebas Neue', sans-serif;
