fix: :bug: Fix issues on item in the inventory table
Title was rendering undefined for some item properties and item damage roll icon was displayed for weapons without a damage roll formula

--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -10,7 +10,11 @@
       <img src='{{item.img}}' width='24' height='24' />
     </div>
     <div class="flexrow">
-      {{#if (and (eq item.system.type 'weapon') item.system.readied)}}
+      {{#if (and
+        (eq item.system.type 'weapon')
+        item.system.readied
+        item.system.weapon.damage.base
+      )}}
       <div
         class='rollable flexrow'
         data-action='roll'
