--- a/css/sdm.css
+++ b/css/sdm.css
@@ -162,6 +162,30 @@
   text-shadow: -0.7px -0.7px 0 rgb(51, 51, 51), 0 -0.7px 0 rgb(51, 51, 51), 0.7px -0.7px 0 rgb(51, 51, 51), 0.7px 0 0 rgb(51, 51, 51), 0.7px 0.7px 0 rgb(51, 51, 51), 0 0.7px 0 rgb(51, 51, 51), -0.7px 0.7px 0 rgb(51, 51, 51), -0.7px 0 0 rgb(51, 51, 51);
 }
 
+.system-badge {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.25rem;
+}
+
+.system-badge > img {
+  height: 100px;
+  border: none;
+  object-fit: contain;
+}
+
+.system-badge .system-info {
+  position: relative;
+  font-size: var(--font-size-16);
+}
+
+.system-badge .system-info i {
+  padding-inline-start: 2px;
+  font-size: var(--font-size-12);
+}
+
 .grid,
 .grid-2col {
   display: grid;
