--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -131,3 +131,26 @@
     -0.7px 0.7px 0 colors.$c-border,
     -0.7px 0 0 colors.$c-border;
 }
+
+.system-badge {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+    padding: .25rem;
+
+    > img {
+      height: 100px;
+      border: none;
+      object-fit: contain;
+    }
+
+    .system-info {
+      position: relative;
+      font-size: var(--font-size-16);
+      i {
+        padding-inline-start: 2px;
+        font-size: var(--font-size-12);
+      }
+    }
+  }
