fix: :bug: Remove unfinished features from the UI and add missing burden name input while editing a burden

--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -7,4 +7,8 @@
   {{#if (eq item.type 'gear')}}
   {{> ($$ "item/gear/header")}}
   {{/if}}
+
+  {{#if (eq item.type 'burden')}}
+  {{> ($$ "item/burden/header")}}
+  {{/if}}
 </div>
