--- a/templates/actor/character/update-attack.hbs
+++ b/templates/actor/character/update-attack.hbs
@@ -18,7 +18,7 @@
       </label>
       <select name='favorite_skill' class='resource-content'>
         <option value=''></option>
-        {{selectOptions skills valueAttr='id' labelAttr='name' selected=selectedSkill}}
+        {{selectOptions skills valueAttr='id' labelAttr='name' selected=selectedSkill sort=true}}
       </select>
     </div>
   </div>
