--- a/templates/transfer-dialog.hbs
+++ b/templates/transfer-dialog.hbs
@@ -25,7 +25,7 @@
       </label>
       <select name='targetActor'>
         <option value=''></option>
-        {{selectOptions actors valueAttr='id' labelAttr='name'}}
+        {{selectOptions actors valueAttr='id' labelAttr='name' sort=true}}
       </select>
     </div>
   </div>
