fix: :bug: Add system pause icon and fix attack_bonus been wrongly applied to ability rolls

--- a/templates/transfer-dialog.hbs
+++ b/templates/transfer-dialog.hbs
@@ -15,7 +15,7 @@
           max='{{item.system.quantity}}'
           required
           data-type='Number'
-          placeholder='100'
+          placeholder=''
         />
       </div>
     {{/if}}
