--- a/templates/actor/character/header.hbs
+++ b/templates/actor/character/header.hbs
@@ -247,7 +247,7 @@
               <div class='ability flexrow flex-group-center'>
                 <div class="flexcol">
                   <span class='resource-label rollable
-                  {{ifThen @root.coloredLabels (lookup @root.config.abilityColors key) ""}}
+                  {{ifThen @root.coloredLabels @root.config.abilityColors[../@index] ""}}
                   {{ifThen @root.coloredLabels "icon-border" ""}}
                   ' data-action='roll' data-context='rollable'
                     data-ability="{{key}}" data-type="ability"
@@ -257,7 +257,7 @@
                   </span>
                   {{#if (eq key 'cha')}}
                   <i
-                    class="fa-duotone fa-theater-masks rollable {{lookup @root.config.abilityColors key}}"
+                    class="fa-duotone fa-theater-masks rollable {{@root.config.abilityColors[../@index]}}"
                     title="{{localize 'SDM.ReactionRoll'}}"
                     data-action="reactionRoll"  data-context='rollable'
                   ></i>
@@ -274,7 +274,7 @@
                   title="{{localize 'SDM.AbilityCurrent' ability=(localize (lookup @root.config.abilities key))}}" />
                 <div class='rollable flexrow' data-roll-type={{key}} data-action='rollSavingThrow'
                   title="{{localize 'SDM.SavingThrowRoll' ability=(localize (lookup @root.config.abilities key))}}">
-                  <i class="fas {{lookup @root.config.abilitySaveIcons key}} saveIcon {{lookup @root.config.abilityColors key}}"></i>
+                  <i class="fas {{lookup @root.config.abilitySaveIcons key}} saveIcon {{@root.config.abilityColors[../@index]}}"></i>
                 </div>
               </div>
               {{/if}}
